--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@ text {
     text-anchor: middle;
 }
 
-.node--hover circle {
-    stroke: #000;
-    stroke-width: 1.2px;
+#header{
+    fill:lightblue;
 }
 
